# n8n-utilities-api

./: .env  Dockerfile  app.py  fly.toml  pyproject.toml  routes_prono.py  utilities.py  variable.py
config/: settings.py
data/: 8b7802b3-db75-4ad1-8b91-6f380c3acafd.json  footapipaid.json  ligue_filter.py
dependencies/: db.py
models/: Bookmaker.py  Coupons.py  FootballAPI.py  League.py  Match.py  Prediction.py  global_variable.py  model.py
static/: style.css
template/: prono.html
tests/models/: FootballApi.py
